[package]
name = "fefixp"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
description = "FIXS implementation in pure Rust."
publish = true
edition = "2021"
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"
