[package]
name = "fefixs"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
description = "FIXP implementation in pure Rust"
publish = true
edition = "2021"
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

[features]
utils-openssl = ["openssl"]

[dependencies]
openssl = { version = "0.10", optional = true }
