[package]
name = "fefixs"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
utils-openssl = [ "openssl" ]

[dependencies]
openssl = { version = "0.10", optional = true }
