[package]
name = "fesofh"
version = "0.1.0"
authors = ["Filippo Costa @neysofu"]
edition = "2021"
homepage = "https://github.com/ferrumfix/ferrumfix"
repository = "https://github.com/ferrumfix/ferrumfix"
description = "SOFH support for Rust"
publish = true
keywords = ["fix", "protocol", "finance", "fintech"]
categories = ["network-programming", "parser-implementations", "encoding"]
license = "MIT OR Apache-2.0"

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "fesofh"

[features]
utils-bytes = ["bytes"]
utils-tokio = ["tokio-util", "utils-bytes"]
full = ["utils-bytes", "utils-tokio"]

[dependencies]
bytes = { version = "1", optional = true }
openssl = { version = "0.10", optional = true }
thiserror = "1"
tokio-util = { version = "0.6", optional = true, features = ["codec"] }

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
enum-as-inner = "0.3"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
syn = { version = "1", features = ["parsing"] }
