[package]
name = "rustyfast"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "rustyfast"

[dependencies]
bitvec = "1.0.1"
decimal = { version = "2", optional = true }
heck = "0.5"
indoc = "2"
# For reading XML.
roxmltree = "0.20"
smallvec = { version = "1.15.1", features = ["serde"] }
thiserror = "2.0"

[build-dependencies]
chrono = "0.4"
heck = "0.5"
indoc = "2"
lazy_static = "1"
quick-xml = "0.38"
roxmltree = "0.20"
rayon = "1"
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
criterion = { version = "0.6", features = ["html_reports"] }
enum-as-inner = "0.6"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
syn = { version = "2", features = ["parsing"] }
