[package]
name = "rustyfast"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "FIX Adapted for STreaming (FAST) in pure Rust."
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "rustyfast"

[features]
default = []
utils-fastrace = [ "fastrace", "fastrace-macro" ]

[dependencies]
bitvec = { workspace = true }
decimal = { workspace = true, optional = true }
heck = { workspace = true }
indoc = { workspace = true }
fastrace = { workspace = true, optional = true }
fastrace-macro = { workspace = true, optional = true }
# For reading XML.
roxmltree = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
heck = { workspace = true }
indoc = { workspace = true }
lazy_static = { workspace = true }
quick-xml = { workspace = true }
roxmltree = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
enum-as-inner = { workspace = true }
quickcheck = { workspace = true }
quickcheck_derive = { workspace = true }
quickcheck_macros = { workspace = true }
syn = { workspace = true, features = ["parsing"] }
