[package]
name = "rustyfix-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std"] }
rustyfix-dictionary = { version = "0.7", path = "../rustyfix-dictionary" }
rustc-hash = { workspace = true }
heck = { workspace = true }
indoc = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
enum-as-inner = { workspace = true }
rustyfix-dictionary = { version = "0.7", path = "../rustyfix-dictionary", features = [
    "fix40",
    "fix41",
    "fix42",
    "fix43",
    "fix50",
] }
quickcheck = { workspace = true }
quickcheck_derive = { workspace = true }
quickcheck_macros = { workspace = true }
syn = { workspace = true, features = ["parsing", "full"] }
tokio = { workspace = true }
