[package]
name = "rustyfix-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "rustyfix_derive"
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "parsing"] }
