[package]
name = "rustyfix-dictionary"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
fix40 = []
fix41 = []
fix42 = []
fix43 = []
fix44 = []
# FIX 4.4 is always enabled.
fix50 = []
fix50sp1 = []
fix50sp2 = []
fixt11 = []

[dependencies]
roxmltree = { workspace = true }
smartstring = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
enum-as-inner = { workspace = true }
quickcheck = { workspace = true }
quickcheck_derive = { workspace = true }
quickcheck_macros = { workspace = true }
tokio = { workspace = true }
syn = { workspace = true, features = ["parsing"] }
