[package]
name = "rustyfix"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "rustyfix"

[[bench]]
name = "fix_decode"
harness = false

[features]
default = [ "utils-chrono", "utils-tokio" ]
codegen = [ "rustyfix-codegen" ]
derive = []
json-encoding = []
fix40 = [ "rustyfix-dictionary/fix40" ]
fix41 = [ "rustyfix-dictionary/fix41" ]
fix42 = [ "rustyfix-dictionary/fix42" ]
fix43 = [ "rustyfix-dictionary/fix43" ]
fix50 = [ "rustyfix-dictionary/fix50" ]
fix50sp1 = [ "rustyfix-dictionary/fix50sp1" ]
fix50sp2 = [ "rustyfix-dictionary/fix50sp2" ]
fixt11 = [ "rustyfix-dictionary/fixt11" ]
# Third-party crate integration.
utils-bytes = [ "bytes" ]
utils-chrono = []
utils-decimal = [ "decimal" ]
utils-rust-decimal = [ "rust_decimal" ]
utils-slog = [ "slog" ]
utils-tokio = [ "tokio-util", "utils-bytes" ]

full = [
	"codegen",
	"derive",
	"fix40",
	"fix41",
	"fix42",
	"fix43",
	"fix50",
	"fix50sp1",
	"fix50sp2",
	"fixt11",
	"json-encoding",
	"utils-bytes",
	"utils-chrono",
	"utils-decimal",
	"utils-rust-decimal",
	"utils-slog",
	"utils-tokio",
]

[dependencies]
bytes = { version = "1", optional = true }
chrono = "0.4"
decimal = { version = "2", optional = true }
rustyfix-codegen = { version = "0.7", path = "../rustyfix-codegen", optional = true }
rustyfix-derive = { version = "0.7", path = "../rustyfix-derive" }
rustyfix-dictionary = { version = "0.7", path = "../rustyfix-dictionary" }
futures = "0.3"
futures-timer = "3"
nohash-hasher = "0.2"
rustc-hash = { workspace = true }
rust_decimal = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slog = { version = "2", optional = true }
smartstring = "1"
thiserror = "2"
quanta = "0.12.6"
tokio-util = { version = "0.7", optional = true, features = [
	"codec",
	"compat",
] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
chrono = "0.4"
rustyfix-codegen = { version = "0.7", path = "../rustyfix-codegen" }
rustyfix-dictionary = { version = "0.7", path = "../rustyfix-dictionary" }
lazy_static = "1"
quick-xml = "0.38"
roxmltree = "0.20"

[dev-dependencies]
arbitrary = { version = "1.4", features = ["derive"] }
criterion = { version = "0.6", features = ["html_reports"] }
enum-as-inner = "0.6"
quickcheck = "1"
quickcheck_derive = "0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
syn = { version = "2", features = ["parsing"] }
rust_decimal_macros = "1.33.1"
