[package]
name = "rustyfix"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "rustyfix"

[[bench]]
name = "fix_decode"
harness = false

[features]
default = ["utils-chrono", "utils-tokio"]
codegen = ["rustyfix-codegen"]
derive = []
json-encoding = []
fix40 = ["rustyfix-dictionary/fix40"]
fix41 = ["rustyfix-dictionary/fix41"]
fix42 = ["rustyfix-dictionary/fix42"]
fix43 = ["rustyfix-dictionary/fix43"]
fix50 = ["rustyfix-dictionary/fix50"]
fix50sp1 = ["rustyfix-dictionary/fix50sp1"]
fix50sp2 = ["rustyfix-dictionary/fix50sp2"]
fixt11 = ["rustyfix-dictionary/fixt11"]
# Third-party crate integration.
utils-bytes = ["bytes"]
utils-chrono = []
utils-decimal = ["decimal"]
utils-rust-decimal = ["rust_decimal"]
utils-slog = ["slog"]
utils-tokio = ["tokio-util", "utils-bytes"]

full = [
	"codegen",
	"derive",
	"fix40",
	"fix41",
	"fix42",
	"fix43",
	"fix50",
	"fix50sp1",
	"fix50sp2",
	"fixt11",
	"json-encoding",
	"utils-bytes",
	"utils-chrono",
	"utils-decimal",
	"utils-rust-decimal",
	"utils-slog",
	"utils-tokio",
]

[dependencies]
bytes = { workspace = true, optional = true }
chrono = { workspace = true }
decimal = { workspace = true, optional = true }
rustyfix-codegen = { version = "0.7", path = "../rustyfix-codegen", optional = true }
rustyfix-derive = { version = "0.7", path = "../rustyfix-derive" }
rustyfix-dictionary = { version = "0.7", path = "../rustyfix-dictionary" }
futures = { workspace = true }
futures-timer = { workspace = true }
nohash-hasher = { workspace = true }
rustc-hash = { workspace = true }
rust_decimal = { workspace = true, optional = true }
serde = { workspace = true }
simd-json = { workspace = true }
slog = { workspace = true, optional = true }
smartstring = { workspace = true }
thiserror = { workspace = true }
quanta = { workspace = true }
tokio-util = { workspace = true, optional = true, features = [
	"codec",
	"compat",
] }
uuid = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
rustyfix-codegen = { version = "0.7", path = "../rustyfix-codegen" }
rustyfix-dictionary = { version = "0.7", path = "../rustyfix-dictionary" }
lazy_static = { workspace = true }
quick-xml = { workspace = true }
roxmltree = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
enum-as-inner = { workspace = true }
quickcheck = { workspace = true }
quickcheck_derive = { workspace = true }
quickcheck_macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "compat"] }
syn = { workspace = true, features = ["parsing"] }
rust_decimal_macros = { workspace = true }
