[package]
name = "rustyfixml"
version = "0.1.0"
edition = "2021"
description = "FIXML (XML-based FIX) encoding for RustyFix"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustyfix/rustyfix"
documentation = "https://docs.rs/rustyfixml"
keywords = ["fix", "fixml", "xml", "trading", "finance"]
categories = ["encoding", "finance", "network-programming"]

[dependencies]
# High-performance core dependencies
smallvec = { workspace = true }
fastrace = { workspace = true }
thiserror = { workspace = true }

# XML processing
quick-xml = "0.36"
serde = { workspace = true, features = ["derive"] }

# Optional features
chrono = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["timestamps"]
timestamps = ["chrono"]
