[package]
name = "rustyfixp"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
