[package]
name = "rustysofh"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
publish.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# https://stackoverflow.com/q/61417452/
# Test locally using `RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[lib]
name = "rustysofh"

[features]
utils-bytes = [ "bytes" ]
utils-tokio-codec = [ "tokio-util", "utils-bytes" ]
full = [ "utils-bytes", "utils-tokio-codec" ]

[dependencies]
bytes = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, optional = true, features = ["codec"] }

[dev-dependencies]
arbitrary = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
enum-as-inner = { workspace = true }
quickcheck = { workspace = true }
quickcheck_derive = { workspace = true }
quickcheck_macros = { workspace = true }
syn = { workspace = true, features = ["parsing"] }
