[package]
name = "example_encode_new_order_single"
version = { workspace = true }
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["rust_decimal"] # False positive

[dependencies]
decimal = { workspace = true }
rustyfix = { path = "../../crates/rustyfix", features = [
    "utils-decimal",
    "utils-rust-decimal",
] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
